<resources>
    <string name="app_name">UIComponent</string>
    <string name="pria">PRIA</string>
    <string name="wanita">WANITA</string>
    <string name="hapus">hapus</string>
    <string name="tambah">tambah</string>
    <string name="traveling">Traveling</string>
    <string name="reading">Reading</string>
    <string name="coding">Coding</string>
    <string name="hobi">Hobi:</string>
    <string name="nama">Nama:</string>
    <string name="gender">Gender:</string>
</resources>